infrastructure/03-apps/jellyfin/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-policy
  namespace: jellyfin
spec:
  endpointSelector:
    matchLabels:
      app: jellyfin
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": traefik
        "k8s:app.kubernetes.io/name": traefik
    toPorts:
    - ports:
      - port: "8096"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": alloy
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
          - matchPattern: "*"
  - toEntities:
    - world
    - cluster
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": auth
        app: openldap
    toPorts:
    - ports:
      - port: "389"
        protocol: TCP
      - port: "636"
        protocol: TCP
